--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-webpack",
+  "name": "vertical-tabs-chrome-extension",
   "version": "0.0.1",
-  "description": "A chrome extension boilerplate built with React 16 and Webpack 4",
+  "description": "A chrome extension that presents your tabs vertically.",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lxieyang/chrome-extension-webpack-boilerplate-with-react-16.git"
+    "url": "https://github.com/lxieyang/vertical-tabs-chrome-extension.git"
   },
   "scripts": {
     "build": "node utils/build.js",
@@ -40,11 +40,24 @@
     "fs-extra": "7.0.1",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
+    "husky": "^3.0.1",
+    "lint-staged": "^9.2.0",
     "prettier": "1.18.2",
     "style-loader": "^0.23.1",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.2.1",
     "write-file-webpack-plugin": "4.5.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx,css}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
