--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,15 +1,8 @@
 {
-  "name": "Chrome Extension with React & Webpack",
+  "name": "Vertical Tabs",
   "options_page": "options.html",
   "background": {
     "page": "background.html"
-  },
-  "browser_action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon-34.png"
-  },
-  "chrome_url_overrides": {
-    "newtab": "newtab.html"
   },
   "icons": {
     "128": "icon-128.png"
