--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,25 @@
 {
-  "extends": "react-app"
+  "parser": "babel-eslint",
+  "parserOptions": {
+    "sourceType": "module",
+    "allowImportExportEverywhere": false,
+    "codeFrame": false
+  },
+  "extends": ["react-app", "prettier"],
+  "env": {
+    "browser": true,
+    "jest": true
+  },
+  "rules": {
+    "max-len": ["error", {
+      "code": 300
+    }],
+    "prefer-promise-reject-errors": ["off"],
+    "react/jsx-filename-extension": ["off"],
+    "react/prop-types": ["off"],
+    "no-return-assign": ["off"]
+  },
+  "globals": {
+    "chrome": "readonly"
+  }
 }
