--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,6 +13,7 @@
     "css": ["content.styles.css"]
   }],
   "web_accessible_resources": [
+    "sidebar.html",
     "content.styles.css",
     "icon-128.png",
     "icon-34.png"
