--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@hot-loader/react-dom": "^16.8.6",
     "classnames": "^2.2.6",
     "glamor": "^2.20.40",
+    "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
     "re-resizable": "^5.0.1",
     "react": "^16.8.6",
