--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,6 +6,7 @@
   },
   "browser_action": {},
   "permissions": [
+    "chrome://favicon/",
     "tabs",
     "activeTab",
     "storage"
@@ -25,5 +26,5 @@
     "icon-34.png"
   ],
   "manifest_version": 2,
-  "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
+  "content_security_policy": "img-src chrome://favicon; script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
