better chrome styling

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.8",
-    "react-hover-observer": "^2.1.1"
+    "react-hover-observer": "^2.1.1",
+    "react-icons": "^3.7.0",
+    "react-lines-ellipsis": "^0.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
