--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,5 +25,6 @@
     "icon-34.png"
   ],
   "manifest_version": 2,
+  "key": "pddljdmihkpdfpkgmbhdomeeifpklgnm",
   "content_security_policy": "img-src chrome://favicon; script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
