update background page

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,7 +14,7 @@
     "128": "icon-128.png"
   },
   "content_scripts": [{
-    "matches": ["http://*/*", "https://*/*", "<all_urls>"],
+    "matches": ["<all_urls>"],
     "js": ["contentScript.bundle.js"],
     "css": ["content.styles.css"]
   }],
