drag and drop to reorder tabs

--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "@hot-loader/react-dom": "^16.8.6",
     "classnames": "^2.2.6",
     "glamor": "^2.20.40",
+    "immutability-helper": "^3.0.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "re-resizable": "^5.0.1",
     "react": "^16.8.6",
+    "react-dnd": "^9.3.4",
+    "react-dnd-html5-backend": "^9.3.4",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.8",
     "react-hover-observer": "^2.1.1",
