--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,9 @@
   "background": {
     "page": "background.html"
   },
-  "browser_action": {},
+  "browser_action": {
+
+  },
   "permissions": [
     "chrome://favicon/",
     "tabs",
@@ -22,7 +24,9 @@
     "sidebar.html",
     "content.styles.css",
     "icon-128.png",
-    "icon-34.png"
+    "icon-34.png",
+    "icon-128-eye.png",
+    "icon-34-eye.png"
   ],
   "manifest_version": 2,
   "commands": {
