--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vertical-tabs-chrome-extension",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "A chrome extension that presents your tabs vertically.",
   "license": "MIT",
   "repository": {
@@ -75,7 +75,7 @@
     }
   },
   "lint-staged": {
-    "*.{js,jsx,css}": [
+    "*.{js,jsx,css,html}": [
       "prettier --write",
       "git add"
     ]
