--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "re-resizable": "^5.0.1",
-    "react": "^16.8.6",
+    "react": "^16.9.0",
     "react-contextmenu": "^2.11.0",
     "react-dnd": "^9.3.4",
     "react-dnd-html5-backend": "^9.3.4",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.8",
     "react-hover-observer": "^2.1.1",
     "react-icons": "^3.7.0",
     "react-lines-ellipsis": "^0.14.1",
-    "react-loader-spinner": "^3.1.2"
+    "react-loader-spinner": "^3.1.2",
+    "react-tiny-popover": "^3.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
