--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,30 +3,26 @@
   "background": {
     "page": "background.html"
   },
-  "browser_action": {
-
-  },
-  "permissions": [
-    "chrome://favicon/",
-    "tabs",
-    "activeTab",
-    "storage"
-  ],
+  "browser_action": {},
+  "permissions": ["chrome://favicon/", "tabs", "activeTab", "storage"],
   "icons": {
     "128": "icon-128.png"
   },
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": ["contentScript.bundle.js"],
-    "css": ["content.styles.css"]
-  }],
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["contentScript.bundle.js"],
+      "css": ["content.styles.css"]
+    }
+  ],
   "web_accessible_resources": [
     "sidebar.html",
     "content.styles.css",
     "icon-128.png",
     "icon-34.png",
     "icon-128-eye.png",
-    "icon-34-eye.png"
+    "icon-34-eye.png",
+    "iframe-background.gif"
   ],
   "manifest_version": 2,
   "commands": {
