keep dependencies up-to-date

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "re-resizable": "^5.0.1",
+    "re-resizable": "^6.0.0",
     "react": "^16.9.0",
     "react-contextmenu": "^2.11.0",
     "react-dnd": "^9.3.4",
@@ -39,36 +39,36 @@
     "react-tiny-popover": "^3.4.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
+    "@babel/core": "^7.5.5",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^9.0.0",
-    "babel-loader": "8.0.5",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
     "babel-preset-react-app": "^9.0.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
-    "css-loader": "2.1.0",
+    "css-loader": "^3.2.0",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^6.0.0",
-    "eslint-config-react-app": "^4.0.1",
-    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-config-react-app": "^5.0.1",
+    "eslint-plugin-flowtype": "^4.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-react-hooks": "^1.5.0",
-    "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "file-loader": "^4.2.0",
+    "fs-extra": "^8.1.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "husky": "^3.0.1",
     "lint-staged": "^9.2.0",
     "prettier": "1.18.2",
-    "style-loader": "^0.23.1",
+    "style-loader": "^1.0.0",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.2.1",
-    "write-file-webpack-plugin": "4.5.0"
+    "write-file-webpack-plugin": "^4.5.1"
   },
   "husky": {
     "hooks": {
