--- a/package.json
+++ b/package.json
@@ -61,9 +61,10 @@
     "fs-extra": "^8.1.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
-    "husky": "^3.0.1",
+    "husky": "^3.0.4",
     "lint-staged": "^9.2.0",
     "prettier": "1.18.2",
+    "pretty-quick": "^1.11.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6",
@@ -72,13 +73,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "pretty-quick --staged --verbose"
     }
-  },
-  "lint-staged": {
-    "*.{js,jsx,css,html}": [
-      "prettier --write",
-      "git add"
-    ]
   }
 }
