--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@types/chrome": "0.0.125",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
     "classnames": "^2.2.6",
     "clipboard-copy": "^3.1.0",
     "glamor": "^2.20.40",
@@ -65,10 +67,13 @@
     "lint-staged": "^10.5.0",
     "node-sass": "^4.14.1",
     "prettier": "^2.1.2",
-    "pretty-quick": "^1.11.1",
+    "pretty-quick": "^3.1.0",
     "sass-loader": "^10.0.4",
+    "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.0.2",
+    "ts-loader": "^8.0.7",
+    "typescript": "^4.0.5",
     "webpack": "^5.3.0",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
