--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vertical-tabs-chrome-extension",
-  "version": "1.9.0",
+  "version": "1.9.1",
   "description": "A chrome extension that presents your tabs vertically.",
   "license": "MIT",
   "repository": {
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "node utils/build.js",
     "start": "node utils/webserver.js",
-    "prettier": "prettier --write '**/*.{js,jsx,css,html}'"
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@hot-loader/react-dom": "^16.12.0",
@@ -23,10 +24,10 @@
     "clipboard-copy": "^3.1.0",
     "glamor": "^2.20.40",
     "immutability-helper": "^3.1.1",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
-    "re-resizable": "^6.7.0",
+    "re-resizable": "^6.9.1",
     "react": "^16.12.0",
     "react-contextmenu": "^2.14.0",
     "react-dnd": "^11.1.3",
@@ -34,11 +35,12 @@
     "react-dom": "^16.12.0",
     "react-hot-loader": "^4.13.0",
     "react-hover-observer": "^2.1.1",
-    "react-icons": "^3.11.0",
-    "react-loader-spinner": "^3.1.14",
-    "react-media": "^1.10.0",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^4.0.0",
+    "react-responsive": "^9.0.0-beta.4",
+    "react-simple-snackbar": "^1.1.11",
     "react-tiny-popover": "^4.0.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
@@ -59,19 +61,19 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "file-loader": "^6.1.1",
+    "file-loader": "^6.2.0",
     "fs-extra": "^9.0.1",
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0-alpha.7",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.0",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
     "node-sass": "^4.14.1",
-    "prettier": "^2.1.2",
-    "pretty-quick": "^3.1.0",
+    "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.1",
     "sass-loader": "^10.0.4",
     "source-map-loader": "^1.1.2",
     "style-loader": "^2.0.0",
-    "terser-webpack-plugin": "^5.0.2",
+    "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^8.0.7",
     "typescript": "^4.0.5",
     "webpack": "^5.3.0",
