--- a/package.json
+++ b/package.json
@@ -14,25 +14,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@hot-loader/react-dom": "^16.12.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@types/chrome": "0.0.125",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "classnames": "^2.2.6",
-    "clipboard-copy": "^3.1.0",
+    "@hot-loader/react-dom": "^17.0.1",
+    "classnames": "^2.3.1",
+    "clipboard-copy": "^4.0.1",
     "glamor": "^2.20.40",
     "immutability-helper": "^3.1.1",
     "jquery": "^3.6.0",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "re-resizable": "^6.9.1",
-    "react": "^16.12.0",
+    "react": "^17.0.1",
     "react-contextmenu": "^2.14.0",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
-    "react-dom": "^16.12.0",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
+    "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
     "react-hover-observer": "^2.1.1",
     "react-icons": "^4.3.1",
@@ -47,6 +42,9 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
+    "@types/chrome": "^0.0.159",
+    "@types/react": "^16.14.17",
+    "@types/react-dom": "^17.0.9",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^10.0.0",
