tab preview frame working

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@hot-loader/react-dom": "^17.0.1",
     "classnames": "^2.3.1",
     "clipboard-copy": "^4.0.1",
+    "detect-browser": "^5.2.1",
     "glamor": "^2.20.40",
+    "image-to-base64": "^2.2.0",
     "immutability-helper": "^3.1.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
