--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vertical-tabs-chrome-extension",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A chrome extension that presents your tabs vertically.",
   "license": "MIT",
   "repository": {
@@ -40,45 +40,44 @@
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/preset-env": "^7.12.1",
-    "@babel/preset-react": "^7.12.1",
+    "@babel/core": "^7.15.8",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
     "@types/chrome": "^0.0.159",
-    "@types/react": "^16.14.17",
-    "@types/react-dom": "^17.0.9",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.10",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.3",
     "babel-preset-react-app": "^10.0.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.2.1",
-    "css-loader": "^5.0.0",
-    "eslint": "^7.12.1",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^5.2.7",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^6.2.0",
-    "fs-extra": "^9.0.1",
-    "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^5.0.0-alpha.7",
+    "fs-extra": "^10.0.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.4.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.3",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "prettier": "^2.4.1",
     "pretty-quick": "^3.1.1",
-    "sass-loader": "^10.0.4",
-    "source-map-loader": "^1.1.2",
+    "sass-loader": "^12.2.0",
+    "source-map-loader": "^3.0.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.2.4",
-    "ts-loader": "^8.0.7",
-    "typescript": "^4.0.5",
-    "webpack": "^5.3.0",
-    "webpack-cli": "^4.1.0",
-    "webpack-dev-server": "^3.11.0"
+    "ts-loader": "^8.3.0",
+    "typescript": "^4.4.4",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^3.11.2"
   },
   "husky": {
     "hooks": {
