Change default activation shortcut in manifest
The default activation shortcut in manifest.json is changed to Ctrl+Q/Cmd+Q to 
avoid collision with the "Search from anywhere on the page" shortcut of Chrome.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -28,8 +28,8 @@
   "commands": {
     "_execute_browser_action": {
       "suggested_key": {
-        "default": "Ctrl+E",
-        "mac": "Command+E"
+        "default": "Ctrl+Q",
+        "mac": "Command+Q"
       }
     }
   },
